apps/kubeai/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-httproute
  namespace: kubeai
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - ai.zeroenet.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 80
